# OBLIGE

./: .gitignore  README.md  pyproject.toml
scripts/: install_openhands_cli.sh  local_agent_reference.py  local_agent_stub.py  local_command_smoke.sh  mini_sweagent_programbench_preflight.sh  mini_sweagent_workflow_enforced_attack_smoke.sh  mini_sweagent_workflow_enforced_online_defense_pilot.sh  opencode_agent_reference.py  opencode_agent_stub.py  opencode_mechanism_ablation_local.sh  opencode_mechanism_ablation_stub.sh  opencode_online_defense_local.sh  opencode_online_defense_stub.sh  opencode_real_mechanism_ablation_pilot.sh  opencode_real_mechanism_ablation_repeat.sh  opencode_real_online_defense_pilot.sh  opencode_real_programbench_mechanism_cleanroom_pilot.sh  opencode_real_programbench_mechanism_cleanroom_pilot30.sh  opencode_real_repair_pagination_budget_calibration.sh  opencode_real_repair_pagination_budget_repeat.sh  opencode_real_repair_pagination_calibration.sh  opencode_real_repair_pagination_smoke.sh  opencode_real_repeat_smoke.sh  opencode_real_smoke.sh  opencode_repair_pagination_budget_local.sh  opencode_repair_pagination_budget_stub.sh  opencode_repair_pagination_smoke_local.sh  opencode_repair_pagination_smoke_stub.sh  opencode_repeat_smoke_local.sh  opencode_repeat_smoke_stub.sh  opencode_spike_smoke.sh  openhands_headless_local.py  openhands_headless_stub.py  openhands_real_online_defense_pilot.sh  openhands_real_smoke.sh  prepare_mini_sweagent_conditions.sh  programbench_export_smoke.sh  programbench_official_finalize.sh  quickstart.sh  (+4 more)
(+139 files in other folders)
